Event Based Navigation

--- a/src/index.scss
+++ b/src/index.scss
@@ -5,7 +5,7 @@
 // INTERN
 @import "assets/css/Fonts.scss";
 @import "assets/css/Layout.scss";
-@import "assets/css/Navi.scss";
+@import "assets/css/Navigation.scss";
 @import "assets/css/Forms.scss";
 @import "assets/css/Buttons.scss";
 @import "assets/css/Tables.scss";
