--- a/src/assets/css/Navigation.scss
+++ b/src/assets/css/Navigation.scss
@@ -9,6 +9,10 @@
     &:hover {
         background-color: rgba(0, 0, 0, 0.1);
     }
+
+    &.active {
+        background-color: rgba(102, 79, 134, 0.3);
+    }
 }
 
 .left-nav {
