++ Page(Feature) Layer

--- a/src/assets/css/Layout.scss
+++ b/src/assets/css/Layout.scss
@@ -85,7 +85,7 @@ main {
 
         .module-content {
             
-            .routes {
+            .feature-content, .page {
                 margin-top: 50px;
                 padding: 1.2rem;
                 height: calc(100vh - 150px);
