--- a/src/assets/css/Fonts.scss
+++ b/src/assets/css/Fonts.scss
@@ -4,6 +4,7 @@
     src: url('assets/fonts/NotoSans-Light.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
+    font-display: block;
  }
 
  @font-face {
@@ -11,6 +12,7 @@
     src: url('assets/fonts/NotoSans-LightItalic.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
+    font-display: block;
  }
 
 @font-face {
@@ -18,6 +20,7 @@
     src: url('assets/fonts/NotoSans-Regular.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
+    font-display: block;
  }
 
  @font-face {
@@ -25,6 +28,7 @@
     src: url('assets/fonts/NotoSans-Italic.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
+    font-display: block;
  }
 
  @font-face {
@@ -32,6 +36,7 @@
     src: url('assets/fonts/NotoSans-Medium.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
+    font-display: block;
  }
 
  @font-face {
@@ -39,6 +44,7 @@
     src: url('assets/fonts/NotoSans-MediumItalic.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
+    font-display: block;
  }
 
  .f300 {
@@ -82,18 +88,21 @@
     font-family: 'code-regular';
     src: url('assets/fonts/FiraMono-Regular.ttf') format('truetype');
     font-weight: normal;
+    font-display: block;
  }
 
  @font-face {
     font-family: 'code-medium';
     src: url('assets/fonts/FiraMono-Medium.ttf') format('truetype');
     font-weight: normal;
+    font-display: block;
  }
 
  @font-face {
     font-family: 'code-bold';
     src: url('assets/fonts/FiraMono-Bold.ttf') format('truetype');
     font-weight: normal;
+    font-display: block;
  }
 
  .cf400 {
