--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,5 @@
 // 3P
-@import "assets/css/3p/tailwind.css";
+@import "assets/css/3p/tailwind.scss";
 @import "assets/css/3p/material-icons.scss";
 
 // INTERN
