--- a/src/assets/css/Navigation.scss
+++ b/src/assets/css/Navigation.scss
@@ -15,7 +15,8 @@
     }
 }
 
-.left-nav {
+// currently left side
+.app-nav {
     padding: 0.7rem 0;
     background-color: #eee;
     overflow-y: auto;
@@ -55,7 +56,6 @@
 .module-nav {
     z-index: 50;
     height: 50px;
-    position: absolute;
     width: 100%;
     top: 0;
     left: 0;
