--- a/src/assets/css/Navigation.scss
+++ b/src/assets/css/Navigation.scss
@@ -20,6 +20,7 @@
     padding: 0.7rem 0;
     background-color: #eee;
     overflow-y: auto;
+    min-width: 200px;
 
     @media only screen and (max-width: 640px) {
         display: none;
