--- a/src/assets/css/Layout.scss
+++ b/src/assets/css/Layout.scss
@@ -79,7 +79,16 @@ main {
         height: calc(100vh - 100px);
     
         //.app-nav
-        //.module
+
+        .app-routes
+        {
+            flex: 1;
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+
+            //.module
+        }
     }
 
     //.footer
@@ -96,6 +105,7 @@ main {
     .module-content {
         overflow-y: auto;
         height: calc(100vh - 150px); 
+        
         //.feature
     }
 }
